@@ -64,6 +64,7 @@ allprojects {
                 "--add-opens=java.base/java.math=ALL-UNNAMED",
                 "--add-opens=java.base/java.util=ALL-UNNAMED",
                 "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
                 "-Dio.netty.tryReflectionSetAccessible=true",
                 "-Djava.util.logging.config.file=${project.rootDir}/config/java.util.logging.properties"]
 
